# cloud-aws-jornada-de-dados

./: .gitignore  Makefile  README.md  pyproject.toml
class01/: README.md  app.py  index.html  policy_allow_everything.json
class02/: README.md
class02/project/: bucket-policy.json  main.py
class02/project/data/: beautiful_page.html  test_file.md
class03/: README.md
class04/: README.md  s3_list_buckets.py
class05/: README.md
class06/: README.md
class07/: README.md  add_more_data.sql  rds_database_create_table.sql  read_backup_database.sql  vpc_script.sh
class08/: Dockerfile  README.md
class08/scripts/: create_vpc.sh  query.sql  run_in_ec2.sh
class08/src/: fetch.py  fetch_pydantic.py  fetch_schedule.py  test_api.py
class09/: README.md  lambda_function.py
class10/: README.md
class11/: iam_policy.json  index.html
class12/: README.md
class13/: README.md  consumer.py  producer.py
class14/: README.md  lambda_function.py  message_generator.py
class15/: LambdaPutItemDynamoDB.json  README.md  index.html  lambda_function.py
