[project]
name = "cloud-aws-jornada-de-dados"
version = "0.1.0"
description = ""
authors = [
    {name = "Igor Nunes Patricio",email = "igornunespatricio@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3 (>=1.40.74,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "schedule (>=1.2.2,<2.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "faker (>=38.2.0,<39.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "detect-secrets (>=1.5.0,<2.0.0)",
    "pre-commit (>=4.4.0,<5.0.0)"
]
